refactor paper reviewer module
- 重構審稿模組